--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo colorido</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Blog Alana</h1> 
+   <h1>Blog de Alana</h1> 
    <img src="" alt="">
 </body>
 </html>
