--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Blog de Alana</h1> 
-   <img src="" alt="">
+   <h1>Meu blog</h1> 
+   <img src="./simbolo-da-fisioterapia.webp" alt="Essa imagem representa meu futuro profissional, na area da saude. A area da saude reflete">
 </body>
 </html>
