adicionei mais imagens

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
    <h1>Meu blog</h1> 
-   <img src="./simbolo-da-fisioterapia.webp" alt="Essa imagem representa meu futuro profissional, na area da saude. A area da saude reflete">
+   <img src="./simbolo-da-fisioterapia.webp" alt="Essa imagem representa meu futuro profissional, na area da saude.">
+   <img src="./frutas_1743683992827-750x375.webp" alt="Adoro frutas">
+   <img src="./foto-futsal-femiino-torneio-delas-1500x999.jpg" alt="Esporte favorito">
 </body>
 </html>
