--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
    <h1>Meu blog</h1> 
-   <img src="./simbolo-da-fisioterapia.webp" alt="Essa imagem representa meu futuro profissional, na area da saude.">
-   <img src="./frutas_1743683992827-750x375.webp" alt="Adoro frutas">
-   <img src="./foto-futsal-femiino-torneio-delas-1500x999.jpg" alt="Esporte favorito">
+   <img src="./ilustracao-de-uma-mulher-com-cabelos-trencados_1308-174675.avif" alt="Me chamo Alana Ramos Bielak tenho 17 anos.">
+   <img src="./simbolo-da-fisioterapia.webp" alt="Apos o ensino medio pretendo cursar fisioterapia.">
+   <img src="./images (1).jpeg" alt="Tenho uma melhor amiga chamada Ana Carolina.">
+   <img src="./foto-futsal-femiino-torneio-delas-1500x999.jpg" alt="Meu esporte favorito e o futasal.">
+   <img src="./299908-original.webp" alt="Minha comida favorita e strogonoff de carne.">
 </body>
 </html>
