--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 <body>
    <h1>Meu blog</h1> 
    <img src="./ilustracao-de-uma-mulher-com-cabelos-trencados_1308-174675.avif" alt="Me chamo Alana Ramos Bielak tenho 17 anos.">
+   <h1>Me chamo Alana Ramos Bielak tenho 17 anos</h1>
    <img src="./simbolo-da-fisioterapia.webp" alt="Apos o ensino medio pretendo cursar fisioterapia.">
+   <h1>Apos o ensino medio pretendo cursar fisioterapia.</h1>
    <img src="./images (1).jpeg" alt="Tenho uma melhor amiga chamada Ana Carolina.">
+   <h1>Tenho uma melhor amiga chamada Ana Carolina.</h1>
    <img src="./foto-futsal-femiino-torneio-delas-1500x999.jpg" alt="Meu esporte favorito e o futasal.">
+   <h1>Meu esporte favorito e o futasal.</h1>
    <img src="./299908-original.webp" alt="Minha comida favorita e strogonoff de carne.">
+   <h1>Minha comida favorita e strogonoff de carne.</h1>
 </body>
 </html>
