--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <h1>Meu blog</h1> 
    <img src="./ilustracao-de-uma-mulher-com-cabelos-trencados_1308-174675.avif" alt="Me chamo Alana Ramos Bielak tenho 17 anos.">
-   <h1>Me chamo Alana Ramos Bielak tenho 17 anos</h1>
+   <h1>Me chamo Alana Ramos Bielak tenho 17 anos.</h1>
    <img src="./simbolo-da-fisioterapia.webp" alt="Apos o ensino medio pretendo cursar fisioterapia.">
    <h1>Apos o ensino medio pretendo cursar fisioterapia.</h1>
    <img src="./images (1).jpeg" alt="Tenho uma melhor amiga chamada Ana Carolina.">
