nova alteracao css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <img src="./images (1).jpeg" alt="Tenho uma melhor amiga chamada Ana Carolina.">
    <h1>Tenho uma melhor amiga chamada Ana Carolina.</h1>
    <img src="./foto-futsal-femiino-torneio-delas-1500x999.jpg" alt="Meu esporte favorito e o futasal.">
-   <h1>Meu esporte favorito e o futasal.</h1>
+   <h1>Meu esporte favorito e o futsal.</h1>
    <img src="./299908-original.webp" alt="Minha comida favorita e strogonoff de carne.">
    <h1>Minha comida favorita e strogonoff de carne.</h1>
 </body>
